modules/ec2/security_groups.tf
resource "aws_security_group" "bastion_sg" {
  name        = "${var.environment}-${var.project}-bastion-sg"
  description = "Security group for Bastion Host"
  vpc_id      = var.vpc_id # Se pasa desde el módulo VPC

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = [var.vpc_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.environment}-bastion-sg"
    Environment = var.environment
  }
}
